--- a/res/values/mso.xml
+++ b/res/values/mso.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 9x9 -->
-    <!-- 
    	<string name="app_name">9x9.tv</string>
 	<drawable name="app_icon_ptr">@drawable/nine_launch_logo</drawable>       	
     <string name="white_label">portal</string>
-    <string name="9x9">9x9</string>
+    <string name="mso">9x9</string>
     <string name="default_region">en</string>
     <string name="logo">nine_logo</string>
     <string name="splash_background">nine_bg_open</string>
@@ -15,7 +14,6 @@
     <string name="signin_bg">nine_bg_open</string>      
     <string name="set_banner">nine_banner</string>     
 	<string name="fb_app_id">1429057570658015</string>
-    -->
 		  		
     <!-- Joey Graceffa -->
     <!-- 
@@ -800,6 +798,7 @@
     -->	
        
     <!-- FLIPr.tv -->
+    <!-- 
     <string name="app_name">FLIPr.tv</string>
    	<drawable name="app_icon_ptr">@drawable/fliprtv_launch_logo</drawable>       	
     <string name="white_label">fliprtv</string>
@@ -813,7 +812,8 @@
     <string name="signin_bg">fliprtv_bg_open</string>
     <string name="set_banner">fliprtv_banner</string>
     <string name="fb_app_id">361253423962738</string>
-     
+    -->
+    
     <!-- TEST2 -->
     <!-- 
     <string name="app_name">TEST2</string>
