--- a/res/layout/signin_tablet_new.xml
+++ b/res/layout/signin_tablet_new.xml
@@ -46,7 +46,7 @@
 				android:gravity="center"
 				android:textSize="22sp"
 				android:textColor="#000000"
-				android:text="Log in / Sign up"		
+				android:text="@string/log_in_sign_up"		
 				android:background="#D9D9D9"
 				/>		    					
 		</LinearLayout>
