--- a/res/layout/video_layer_new.xml
+++ b/res/layout/video_layer_new.xml
@@ -36,6 +36,19 @@
 				android:layout_marginRight="12dip"
 				android:src="@drawable/playback_icon_back"							
 				/>	
+	    	<TextView
+    	    	android:id="@+id/portrait_poi_return_instruction"			        			    		    
+				android:layout_width="wrap_content"
+				android:layout_height="fill_parent"
+				android:layout_gravity="left|center_vertical"
+				android:gravity="left|center_vertical"
+				android:textSize="22sp"
+				android:textColor="#FFFFFF"
+				android:singleLine="true"	
+				android:ellipsize="end"	
+				android:text="Return from POI"
+				android:visibility="gone"
+		    	/>				
     		<ImageView		
 	    		android:id="@+id/spacer"	
 	    		android:layout_weight="1"				    		    
@@ -627,7 +640,86 @@
 							android:gravity="top"					
 							android:background="#1D1D1D"				
 							android:visibility="gone"	
-							/>				        					    
+							/>			
+							
+					    <LinearLayout
+					        android:id="@+id/poi_h"
+					        android:layout_width="match_parent"
+					        android:layout_height="match_parent"
+							android:layout_gravity="top|center_horizontal"
+							android:gravity="top|center_horizontal"						        
+					        android:background="#000000"
+					        android:orientation="vertical"
+					        android:visibility="gone">
+							<ImageView
+						        android:layout_width="30dip" 
+						        android:layout_height="15dip"
+						        android:layout_gravity="center"
+						        android:gravity="center"
+						        android:src="@drawable/offwhitetriangle"
+						        android:adjustViewBounds="true"
+						        android:scaleType="fitXY"				        
+						        />					    	    
+				    	    <LinearLayout
+							    android:layout_width="fill_parent"
+							    android:layout_height="wrap_content"
+							    android:layout_marginLeft="20dip"
+							    android:layout_marginRight="20dip"	
+							    android:layout_gravity="center"
+							    android:gravity="center"		    
+							    android:background="#F4F4F4"
+							    android:adjustViewBounds="true"
+							    android:scaleType="fitXY"
+							    android:orientation="horizontal">
+							    <!-- 194 x 262 -->
+							    <FrameLayout
+							        android:id="@+id/poi_h"
+							        android:layout_width="100dip" 
+							        android:layout_height="100dip"
+								    android:layout_gravity="center"
+								    android:gravity="center"							        
+							        android:background="#FB8C00">							    
+									<ImageView
+								        android:layout_width="72dip" 
+								        android:layout_height="90dip"
+								        android:layout_gravity="center"
+								        android:gravity="center"
+								        android:padding="14dip"
+								        android:src="@drawable/lightbulb"
+								        android:adjustViewBounds="true"
+								        android:scaleType="fitXY"
+	 									android:alpha="0.6"							        
+								        />			
+							    </FrameLayout>					    
+							    <TextView		
+							        android:id="@+id/poi_h_message"
+							        android:layout_weight="1"        
+									android:layout_width="0dip"
+									android:layout_height="wrap_content"		
+							    	android:layout_gravity="center"
+							    	android:gravity="center"																					
+									android:textSize="18sp"
+									android:textColor="#454545"
+									android:paddingLeft="20dip"
+									android:paddingRight="20dip"
+									android:text="POI text goes here"	
+							    	/>		
+							    <Button		
+							        android:id="@+id/poi_h_button"        
+									android:layout_width="wrap_content"
+									android:layout_height="wrap_content"
+									android:layout_marginRight="15dip"
+									android:layout_gravity="center"
+									android:paddingLeft="16dip"
+									android:paddingRight="16dip"
+							    	android:gravity="center"														
+									android:textSize="20sp"
+									android:textColor="#FFFFFF"
+									android:text="POI button!"
+									android:background="#FB8C00"	
+							    	/>										    					    			    	    
+							</LinearLayout>			    	  
+			    	    </LinearLayout>					    
 					</FrameLayout>
 					
 					<LinearLayout
@@ -668,8 +760,8 @@
 					    	/>				
 						<tv.tv9x9.player.CircleImageView
 					    	android:id="@+id/playback_channel_icon"
-					        android:layout_width="50dip" 
-					        android:layout_height="50dip"
+					        android:layout_width="40dip" 
+					        android:layout_height="40dip"
 					        android:layout_gravity="center"
 					        android:gravity="center"
 					        android:padding="6dip"
