--- a/res/layout/player_fragment.xml
+++ b/res/layout/player_fragment.xml
@@ -6,12 +6,12 @@
  	android:layout_height="match_parent"
   	android:orientation="vertical"
   	android:visibility="visible">
-    <SurfaceView
+    <VideoView
         android:id="@+id/surface"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center" >
-    </SurfaceView>
+        android:layout_gravity="center"
+        />
     <ProgressBar
 	    android:id="@+id/vitamio_spinner"          
     	android:layout_width="60dip"
