--- a/res/layout/video_layer_new.xml
+++ b/res/layout/video_layer_new.xml
@@ -652,24 +652,23 @@
 					        android:orientation="vertical"
 					        android:visibility="gone">
 							<ImageView
-						        android:layout_width="30dip" 
+						        android:layout_width="22dip" 
 						        android:layout_height="15dip"
-						        android:layout_gravity="center"
-						        android:gravity="center"
+						        android:layout_marginRight="65dip"
+						        android:layout_gravity="right"
+						        android:gravity="right"
 						        android:src="@drawable/offwhitetriangle"
 						        android:adjustViewBounds="true"
 						        android:scaleType="fitXY"				        
-						        />					    	    
+						        />					    					        
 				    	    <LinearLayout
 							    android:layout_width="fill_parent"
 							    android:layout_height="wrap_content"
-							    android:layout_marginLeft="20dip"
-							    android:layout_marginRight="20dip"	
+						    	android:layout_marginLeft="20dip"
+						    	android:layout_marginRight="20dip"									    
 							    android:layout_gravity="center"
 							    android:gravity="center"		    
 							    android:background="#F4F4F4"
-							    android:adjustViewBounds="true"
-							    android:scaleType="fitXY"
 							    android:orientation="horizontal">
 							    <!-- 194 x 262 -->
 							    <FrameLayout
@@ -704,21 +703,50 @@
 									android:paddingRight="20dip"
 									android:text="POI text goes here"	
 							    	/>		
-							    <Button		
-							        android:id="@+id/poi_h_button"        
-									android:layout_width="wrap_content"
-									android:layout_height="wrap_content"
-									android:layout_marginRight="15dip"
+							    <LinearLayout
+							        android:layout_width="wrap_content"
+							        android:layout_height="wrap_content"
+									android:layout_marginRight="15dip"		
 									android:layout_gravity="center"
-									android:paddingLeft="16dip"
-									android:paddingRight="16dip"
-							    	android:gravity="center"														
-									android:textSize="20sp"
-									android:textColor="#FFFFFF"
-									android:text="POI button!"
-									android:background="#FB8C00"	
-							    	/>										    					    			    	    
-							</LinearLayout>			    	  
+									android:orientation="vertical"
+									android:background="#FB8C00">																							       
+								    <Button		
+								        android:id="@+id/poi_h_button"        
+										android:layout_width="wrap_content"
+										android:layout_height="wrap_content"
+										android:layout_gravity="center"
+										android:paddingLeft="16dip"
+										android:paddingRight="16dip"
+								    	android:gravity="center"														
+										android:textSize="20sp"
+										android:textColor="#FFFFFF"
+										android:text="POI button!"
+										android:background="#FB8C00"	
+								    	/>			
+								    <FrameLayout
+								        android:layout_width="fill_parent"
+								        android:layout_height="3dip"
+										android:layout_gravity="bottom"
+										android:background="#BC6E0B"
+										/>								    	
+								</LinearLayout>							    								    					    			    	    
+							</LinearLayout>
+							<LinearLayout
+							    android:layout_width="match_parent"
+							    android:layout_height="5dip"
+						    	android:layout_marginLeft="20dip"
+						    	android:layout_marginRight="20dip"									    
+							    android:orientation="horizontal"
+							    android:background="#999797">
+							    <FrameLayout
+								    android:layout_width="100dip" 
+								    android:layout_height="5dip"
+								    android:layout_gravity="bottom"
+								    android:gravity="bottom"
+								    android:background="#BC6E0B"
+								    />	
+							</LinearLayout>					
+	    	  
 			    	    </LinearLayout>					    
 					</FrameLayout>
 					
