--- a/res/layout/nag_layer.xml
+++ b/res/layout/nag_layer.xml
@@ -5,7 +5,8 @@
     android:layout_gravity="top|center_horizontal"
     android:gravity="top|center_horizontal"        
     android:background="#FFFFFF"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="gone">
 			
 	<tv.tv9x9.player.StoppableViewPager
 	    xmlns:android="http://schemas.android.com/apk/res/android"
