--- a/res/layout/main_settings.xml
+++ b/res/layout/main_settings.xml
@@ -9,7 +9,7 @@
     android:layout_marginRight="12dip"
     android:background="#FFFFFF"
     android:orientation="vertical">		    
-     		
+			
 	<LinearLayout           
 			android:layout_width="fill_parent" 
 			android:layout_height="wrap_content"
@@ -17,7 +17,15 @@
 			android:orientation="horizontal">
 		<include layout="@layout/account_settings" />
 	</LinearLayout>
-
+	
+    <LinearLayout           
+			android:layout_width="fill_parent" 
+			android:layout_height="wrap_content"
+			android:layout_marginTop="5dip"
+			android:orientation="horizontal">
+		<include layout="@layout/playback_settings" />
+	</LinearLayout>
+	
 	<LinearLayout           
 			android:layout_width="fill_parent" 
 			android:layout_height="wrap_content"
