--- a/res/layout/video_layer_new.xml
+++ b/res/layout/video_layer_new.xml
@@ -276,7 +276,82 @@
 			    />
 	      	
 	  	</tv.tv9x9.player.SpecialFrameLayout>
-	  	
+
+		<FrameLayout
+		    android:id="@+id/skippistan"
+		    android:layout_width="match_parent"
+		    android:layout_height="60dip"
+		    android:background="#1D1D1D">	
+			<LinearLayout
+			    android:id="@+id/should_i_skip"
+			    android:layout_width="match_parent"
+			    android:layout_height="60dip"
+			    android:background="#1D1D1D"
+			    android:orientation="horizontal"
+			    android:visibility="visible">	
+		    	<TextView		        
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:layout_marginLeft="20dip"
+					android:layout_gravity="left|center_vertical"
+					android:gravity="left|center_vertical"
+					android:textSize="18sp"
+					android:textColor="#D0D0D0"
+					android:singleLine="true"	
+					android:text="Already seen!"
+			    	/>		
+		    	<TextView		        
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:layout_marginLeft="6dip"				
+					android:layout_gravity="left|center_vertical"
+					android:gravity="left|center_vertical"
+					android:textSize="20sp"
+					android:textColor="#FFFF00"
+					android:singleLine="true"	
+					android:text="@string/skip_all_watched_episodes"
+			    	/>			    			    
+			</LinearLayout>
+			<LinearLayout
+			    android:id="@+id/i_just_skipped"
+			    android:layout_width="match_parent"
+			    android:layout_height="60dip"
+			    android:background="#1D1D1D"
+			    android:orientation="horizontal"
+			    android:visibility="gone">	
+		    	<TextView		        
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:layout_marginLeft="20dip"
+					android:layout_gravity="left|center_vertical"
+					android:gravity="left|center_vertical"
+					android:textSize="18sp"
+					android:textColor="#D0D0D0"
+					android:singleLine="true"	
+					android:text="Watched videos will be skipped."
+			    	/>				    			    
+			</LinearLayout>			
+			<LinearLayout
+			    android:id="@+id/three_in_a_row"
+			    android:layout_width="match_parent"
+			    android:layout_height="60dip"
+			    android:background="#1D1D1D"
+			    android:orientation="horizontal"
+			    android:visibility="gone">	
+		    	<TextView		        
+					android:layout_width="wrap_content"
+					android:layout_height="match_parent"
+					android:layout_marginLeft="20dip"
+					android:layout_gravity="left|center_vertical"
+					android:gravity="left|center_vertical"
+					android:textSize="18sp"
+					android:textColor="#D0D0D0"
+					android:singleLine="true"	
+					android:text="@string/three_in_a_row"
+			    	/>				    			    
+			</LinearLayout>				
+		</FrameLayout>
+			  	
 		<LinearLayout
 		    android:id="@+id/controls"
 		    android:layout_width="match_parent"
@@ -302,7 +377,7 @@
 					android:text="@string/from_uc"
 			    	/>				   
 				<tv.tv9x9.player.CircleImageView
-			    	android:id="@+id/playback_channel_icon_landscape"
+			    	android:id="@+id/playback_channel_icon_landscape_circle"
 			        android:layout_width="60dip" 
 			        android:layout_height="60dip"
 					android:layout_gravity="center"
@@ -311,6 +386,16 @@
 			        android:adjustViewBounds="true"
 			        android:scaleType="fitXY"
 			        />	
+				<ImageView
+			    	android:id="@+id/playback_channel_icon_landscape_square"
+			        android:layout_width="60dip" 
+			        android:layout_height="60dip"
+					android:layout_gravity="center"
+					android:gravity="center"			        
+			        android:padding="6dip"
+			        android:adjustViewBounds="true"
+			        android:scaleType="fitXY"
+			        />				        
 		    	<TextView
 	    	    	android:id="@+id/landscape_channel_name"			        
 					android:layout_width="wrap_content"
@@ -564,14 +649,23 @@
 					        android:adjustViewBounds="true"
 					        android:scaleType="fitXY">				    						    	
 							<tv.tv9x9.player.CircleImageView
-						    	android:id="@+id/real_channel_icon"
+						    	android:id="@+id/real_channel_icon_circle"
 						        android:layout_width="match_parent" 
 						        android:layout_height="match_parent"
 								android:layout_gravity="center"
 								android:gravity="center"			        
 						        android:adjustViewBounds="true"
 						        android:scaleType="fitXY"
-						        />						
+						        />	
+							<ImageView
+						    	android:id="@+id/real_channel_icon_square"
+						        android:layout_width="match_parent" 
+						        android:layout_height="match_parent"
+								android:layout_gravity="center"
+								android:gravity="center"			        
+						        android:adjustViewBounds="true"
+						        android:scaleType="fitXY"
+						        />							        					
 						    <ProgressBar
 							  	android:id="@+id/real_channel_progress"          
 						    	android:layout_width="match_parent"
@@ -787,7 +881,7 @@
 							android:text="@string/from_uc"							
 					    	/>				
 						<tv.tv9x9.player.CircleImageView
-					    	android:id="@+id/playback_channel_icon"
+					    	android:id="@+id/playback_channel_icon_circle"
 					        android:layout_width="40dip" 
 					        android:layout_height="40dip"
 					        android:layout_gravity="center"
@@ -795,7 +889,17 @@
 					        android:padding="6dip"
 					        android:adjustViewBounds="true"
 					        android:scaleType="fitXY"
-					        />		
+					        />	
+						<ImageView
+					    	android:id="@+id/playback_channel_icon_square"
+					        android:layout_width="40dip" 
+					        android:layout_height="40dip"
+					        android:layout_gravity="center"
+					        android:gravity="center"
+					        android:padding="6dip"
+					        android:adjustViewBounds="true"
+					        android:scaleType="fitXY"
+					        />					        	
 					    <TextView		
 					        android:id="@+id/playback_channel"        
 							android:layout_width="0dip"
