--- a/res/values-zh/mso.xml
+++ b/res/values-zh/mso.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 9x9 -->
-    <!-- 
    	<string name="app_name">9x9.tv</string> 
 	<drawable name="app_icon_ptr">@drawable/nine_launch_logo</drawable>    	  	
     <string name="white_label">portal</string>
-    <string name="mso">test</string>
+    <string name="mso">9x9</string>
     <string name="default_region">zh</string>
     <string name="logo">nine_logo</string>
     <string name="splash_background">nine_bg_open</string>
@@ -15,7 +14,6 @@
     <string name="signin_bg">nine_bg_open</string>      
     <string name="set_banner">nine_banner</string>        
 	<string name="fb_app_id">1429057570658015</string>
-	-->
 			 				  			
 	<!-- Joey Graceffa -->
     <!--  
@@ -869,6 +867,7 @@
     -->
     
     <!-- LyChee TV -->
+    <!-- 
     <string name="app_name">荔枝電視</string>
    	<drawable name="app_icon_ptr">@drawable/fliprctvbayarea_launch_logo</drawable>       	
     <string name="white_label">lycheetv</string>
@@ -882,5 +881,6 @@
     <string name="signin_bg">fliprctvbayarea_bg_open</string>
     <string name="set_banner">fliprctvbayarea_banner</string>
     <string name="fb_app_id">361253423962738</string>
+    -->
     
 </resources>
