--- a/res/layout/settings_phone_new.xml
+++ b/res/layout/settings_phone_new.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#D7D7D7"
     android:orientation="vertical"
-    android:visibility="visible">
+    android:visibility="gone">
 
     <LinearLayout           
 		android:layout_width="fill_parent" 
