--- a/res/values/mso.xml
+++ b/res/values/mso.xml
@@ -5,7 +5,7 @@
 	<drawable name="app_icon_ptr">@drawable/nine_launch_logo</drawable>       	
     <string name="white_label">portal</string>
     <string name="mso">9x9</string>
-    <string name="default_region">zh</string>
+    <string name="default_region">en</string>
     <string name="logo">nine_logo</string>
     <string name="splash_background">nine_bg_open</string>
     <string name="splash_foreground">splash_generic_logo</string>        
