--- a/res/layout/home_layer.xml
+++ b/res/layout/home_layer.xml
@@ -102,6 +102,15 @@
 			    android:scaleType="fitXY"
 			    android:adjustViewBounds="true"
 			    />
+			<ImageView
+			    android:id="@+id/home_swipe_hint_ordinary"
+			    android:layout_width="wrap_content"			    
+			    android:layout_height="wrap_content"
+			    android:layout_gravity="center"
+			    android:gravity="center"
+			    android:src="@drawable/home_hint_ordinary"
+			    android:visibility="gone"
+			    />			
 		</FrameLayout>
 		
     </FrameLayout>		    	
