--- a/res/layout/top_bar.xml
+++ b/res/layout/top_bar.xml
@@ -99,15 +99,32 @@
 			    android:layout_height="fill_parent"	  
 			    android:layout_gravity="right|center_vertical"
 			    android:gravity="right|center_vertical"
-			    android:orientation="horizontal">  		
+			    android:orientation="horizontal">
+		    	<TextView
+	    	    	android:id="@+id/media_route_indicator_in_main"			        			    		    
+					android:layout_width="40dip"
+					android:layout_height="fill_parent"
+					android:layout_gravity="left|center_vertical"
+					android:gravity="right|center_vertical"
+					android:textSize="22sp"
+					android:textColor="#FF0000"
+					android:textStyle="bold"
+					android:background="#FFFF00"
+					android:visibility="gone"
+			    	/>						  	
+		    	<FrameLayout
+	    	    	android:id="@+id/media_route_experiment_in_main"			        			    		    
+					android:layout_width="40dip"
+					android:layout_height="fill_parent"
+			    	/>					    		
 				<android.support.v7.app.MediaRouteButton
 				    android:id="@+id/media_route_button_main"
 					android:mediaRouteTypes="user"			    
 				    android:layout_width="wrap_content"
 				    android:layout_height="fill_parent"
 				    android:layout_gravity="right|center_vertical"
-				    android:gravity="right|center_vertical"		    
-				    android:visibility="visible"				    			    
+				    android:gravity="right|center_vertical"		    	
+				   	android:visibility="gone"	    			    
 				    />
 				<!-- 					    app:mediaRouteOffDrawable="@drawable/icon_follow_black"
 				    app:mediaRouteOnDrawable="@drawable/icon_home"			    
