--- a/res/layout/video_layer_new.xml
+++ b/res/layout/video_layer_new.xml
@@ -101,6 +101,23 @@
 			    	android:visibility="gone"
 			    	/>				        
 		    </FrameLayout>  
+	    	<TextView
+    	    	android:id="@+id/media_route_indicator_in_player"			        			    		    
+				android:layout_width="40dip"
+				android:layout_height="fill_parent"
+				android:layout_gravity="left|center_vertical"
+				android:gravity="right|center_vertical"
+				android:textSize="22sp"
+				android:textColor="#FF0000"
+				android:textStyle="bold"
+				android:background="#FFFF00"
+				android:visibility="gone"
+		    	/>	
+	    	<FrameLayout
+    	    	android:id="@+id/media_route_experiment_in_player"			        			    		    
+				android:layout_width="40dip"
+				android:layout_height="fill_parent"
+		    	/>			    			    
 			<android.support.v7.app.MediaRouteButton
 			    android:id="@+id/media_route_button"
 				android:mediaRouteTypes="user"			    
@@ -108,8 +125,8 @@
 			    android:layout_height="fill_parent"
 			    android:layout_gravity="right|center_vertical"
 			    android:gravity="right|center_vertical"		    
-			    android:visibility="visible"
 			    android:theme="@style/Theme.MediaRouter.Teltel"
+			    android:visibility="gone"
 			    />
 			<!-- android:actionButtonStyle="@android:style/Theme.MediaRouter.Light" -->
 			
